# ore

./: Cargo.toml  Dockerfile  log4rs.yaml  readme.md  rust-toolchain.toml
.github/workflows/: client.yml  docker-image.yml  server.yml
src/: args.rs  claim.rs  find.rs  jito.rs  main.rs  mine.rs  send_and_confirm.rs  utils.rs
