[package]
name = "ore"
version = "1.1.1"
description = "A command line interface for the ORE cryptocurrency mining."
license = "Apache-2.0"
edition = "2021"


[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
serde_json = "1.0"
log = "0.4"
chrono = "0.4"
env_logger = "0.11.3"
futures-util = "0.3"
rayon = "1.10.0"
ore-api = "2.1.0"
solana-rpc-client = "^1.18"
bs58 = "0.5.1"
solana-sdk = "2.0.4"
serde = "1.0.205"
drillx = "2.0.0"
equix = "0.1.6"
log4rs = "1.3.0"
clap = { version = "4.5.14", features = ["derive"] }
