[package]
name = "ore"
version = "1.1.1"
description = "A command line interface for the ORE cryptocurrency mining."
license = "Apache-2.0"
edition = "2021"


[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
serde_json = "1.0"
log = "0.4"
chrono = "0.4"
env_logger = "0.11.3"
futures-util = "0.3"
futures-channel = "0.3.30"
url = "2.5.2"
eyre = "0.6.12"
regex = "1.10.6"
rand = "0.8.5"

ore-api = "2.1.0"
drillx = "2.0.0"
serde = "1.0.205"
bytemuck = "1.16.3"
log4rs = "1.3.0"
clap = { version = "4.5.14", features = ["derive"] }

